--- a/signup.html
+++ b/signup.html
@@ -1,44 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <title>big7983</title>
+    <link rel="stylesheet" href="cssprofile.css">
+    <script type="text/javascript" src="script.js"></script>
+
 </head>
+
 <body>
-    <div class="center">
+    <div class="profile">
+        <br>
+        <br>
+        <center><img src="https://scontent.fbkk5-8.fna.fbcdn.net/v/t1.6435-9/121454392_2821445651472598_6904356901569172173_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=449abTdIv3sAX-dp1iS&tn=3Zhs_asqQletjPxt&_nc_ht=scontent.fbkk5-8.fna&oh=00_AT801MisYkmxWFHEEpRilNOqn_kDA-bXCN7w-6E4BUhHoA&oe=6363201D" height="100"
+                width="100" class="circle"></center>
+        <h2><br>
+            <center>Setthawut Kasiwutchoudchuchai</center>
+        </h2>
+        <h4>
+            <center>ComputurEngineer</center>
+        </h4>
 
-        <h1>Sign up</h1>
-
-        <form name="signup" method="POST" action="signrogic.php" enctype="multipart/form-data">
-
-            <div class="txt_field">
-                <input type="text" name="S_username" required/><label>Username </label>
-            </div>    
-            
-            <div class="txt_field">
-                <input type="email" name="S_Email" required/><label>Email </label>
-            </div>              
-            
-            <div class="txt_field">
-                <input type="password" name="S_password" required/><label>Password </label>
-            </div>
-
-            <div class="txt_field">
-                <input type="password" name="S_pc" required/><label>ConfirmPassword  </label>
-            </div>
-
-            <div>
-                <input type="file" name="S_file" accept="image/png, image/jpeg" required/>
-            </div>
-
-            <div>
-                <br>
-                <input type="submit" name="S_login" value="Signup"><br><br>
-            </div>
-
-        </form>
     </div>
+
 </body>
+
 </html>
